2012-01-23 Roman
- DAQ.BlockCalc, DAQ.JavaLikeCalc, DAQ.LogicLev, DAQ.DCON, Transport.Sockets, Transport.Serial,
	Protocol.HTTP, Protocol.SelfSystem, UI.WebCfgD, Special.FLibComplex1, Special.FLibMath, Special.FLibSYS:
    Builtin to OpenSCADA core support is added.
- Transport.Sockets: Last repeat timeout is added for next requests repeat.


2012-01-22 Roman
- FIX:UI.Vision: Master page replace is some changed by previous remove from centralWidget().


2012-01-21 Roman
- FIX:UI.WebVision: Master page replace is fixed.
- FIX:DB, Archives: Call module's service call function perSYSCall() is fixed.
- Archive.FSArch: Checking for archivators is removed from independent task to service call function.
- Transport.Serial: Checking for output transports is removed from independent task to service call function.


2012-01-19 Roman
- DAQ.ModBus: Maximum request block size is made optional for a controller object.
    Comments support is added into attributes configuration list, for standard parameter type.


2012-01-18 Roman
- DAQ.ModBus: Transaction ID random generation is added to ModBus/TCP requests packages.
- SYS: Some status is added to result build configuration table.


2012-01-17 Roman
- SYS: Check for use libraries "libintl" and "libiconv" is added.
    Function clock_nanosleep() some replaced by nanosleep().
    Symbol '%' using for self is fixed into string "Last: %s. Load: %3.1f%% (%s from %s)", detected on uCLibc-0.9.32.1.
- FIX:Transport.SSL: Dependency to library "libcrypto" is added for fix build and execute on uCLibc-0.9.32.1.
- FIX:UI.WebVision: Check for close old sessions need is removed from independent task to service call function.
    Deadlock resource is removed, detect on uCLibc-0.9.32.1.


2012-01-14 Roman
- FIX:UI.Vision: Early child widgets clear on its parent widget delete is made for prevent access to mostly freeing parent widget
    on child widget remove.


2012-01-12 Roman